# libbstr

./: AUTHORS  Makefile.am  Makefile.in  README  README.markdown  aclocal.m4  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  bstr.c  bstr.h
